# Autonomous-Forge

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.ai/: AUTO-024_RUN.md  AUTO-107.md  AUTONOMOUS_CHANGELOG.md  AUTONOMOUS_PLAN.md  AUTONOMOUS_STATE.md  DECISIONS.md
.github/workflows/: test.yml
docs/: CHANGED_FILE_REVIEW.md  CHANGE_PROPOSALS.md  CHANGE_READINESS.md  COMMANDS.md  COMMAND_EXECUTION_HANDOFFS.md  COMMIT_CREATE.md  COMMIT_PROPOSAL_PREVIEW.md  COMMIT_READINESS.md  COMMIT_STATUS_REVIEW.md  COMMIT_TRUST_REVIEW.md  COMMIT_VERIFY.md  CONTENT_AUDITS.md  DIFF_SOURCE_HANDOFFS.md  EXECUTOR_CONTEXT.md  EXECUTOR_CONTRACTS.md  EXECUTOR_DRY_RUNS.md  EXECUTOR_GATES.md  EXECUTOR_HANDOFF_PERSISTENCE.md  EXECUTOR_OBSERVATION_AUDITS.md  EXECUTOR_RESULT_HANDOFFS.md  EXECUTOR_RUNS.md  GIT_DIFF_REVIEW.md  HEALTH_INVENTORY.md  JSON_RUN_SUMMARY.md  MAINTENANCE_ARCHIVE_COPY.md  MAINTENANCE_ARCHIVE_COPY_PREVIEW.md  MAINTENANCE_ARCHIVE_COPY_VERIFY.md  MAINTENANCE_ARCHIVE_MANIFEST.md  MAINTENANCE_ARCHIVE_PACKAGE.md  MAINTENANCE_ARCHIVE_PACKAGE_PREVIEW.md  MAINTENANCE_ARCHIVE_PACKAGE_VERIFY.md  MAINTENANCE_EVIDENCE_BUNDLE.md  MAINTENANCE_HISTORY_LINK_REVIEW.md  MAINTENANCE_PRESERVATION_COMPLETENESS.md  MAINTENANCE_REPLAY_POLICY_SUMMARY.md  MAINTENANCE_REVIEW_COMPARE.md  MAINTENANCE_REVIEW_HANDOFF.md  OVERVIEW.md  PATCH_APPLICATION_PREFLIGHT.md  PATCH_APPLICATION_READINESS.md  (+27 more)
src/autonomous_forge/: __init__.py  change_intent.py  change_readiness.py  change_readiness_cli.py  cli.py  cli_entry.py  cli_entry_patch.py  command_execution_handoff.py  commit_create.py  commit_create_cli.py  commit_proposal_preview.py  commit_proposal_preview_cli.py  commit_readiness.py  commit_readiness_cli.py  commit_status_review.py  commit_status_review_cli.py  commit_trust_review.py  commit_trust_review_cli.py  commit_verify.py  commit_verify_cli.py  content_audit.py  diff_source_handoff.py  executor_contract.py  executor_dry_run.py  executor_gate.py  executor_handoff_persistence.py  executor_observation_audit.py  executor_run.py  git_diff_review.py  git_diff_review_cli.py  inventory.py  maintenance_archive_copy.py  maintenance_archive_copy_cli.py  maintenance_archive_copy_preview.py  maintenance_archive_copy_preview_cli.py  maintenance_archive_copy_verify.py  maintenance_archive_copy_verify_cli.py  maintenance_archive_manifest.py  maintenance_archive_manifest_cli.py  maintenance_archive_package.py  (+70 more)
tests/: test_change_readiness.py  test_cli.py  test_cli_entry.py  test_cli_entry_patch.py  test_cli_entry_patch_application_audit.py  test_cli_entry_patch_application_preflight.py  test_cli_entry_patch_draft.py  test_cli_entry_patch_text_preflight.py  test_cli_entry_patch_text_review.py  test_command_execution_handoff.py  test_commit_create.py  test_commit_proposal_preview.py  test_commit_readiness.py  test_commit_status_review.py  test_commit_trust_review.py  test_commit_verify.py  test_content_audit.py  test_content_audit_cli.py  test_diff_source_handoff.py  test_dotfile_paths.py  test_executor_contract.py  test_executor_dry_run.py  test_executor_gate.py  test_executor_handoff_persistence.py  test_executor_handoff_persistence_cli.py  test_executor_observation_audit.py  test_executor_observation_audit_cli.py  test_executor_run.py  test_git_diff_review.py  test_inventory.py  test_maintenance_archive_copy.py  test_maintenance_archive_copy_preview.py  test_maintenance_archive_copy_verify.py  test_maintenance_archive_manifest.py  test_maintenance_archive_package.py  test_maintenance_archive_package_preview.py  test_maintenance_archive_package_verify.py  test_maintenance_bundle_validation_context.py  test_maintenance_bundle_verify.py  test_maintenance_evidence_bundle.py  (+49 more)
