[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-forge"
version = "0.1.0"
description = "Local-first tools for safe autonomous repository maintenance loops."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Autonomous Forge contributors" }]
keywords = ["automation", "maintenance", "cli", "repository"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
forge = "autonomous_forge.cli_entry_patch:main"
forge-patch-application-audit = "autonomous_forge.patch_application_audit_cli:main"
forge-patch-application-preflight = "autonomous_forge.patch_application_preflight_cli:main"
forge-patch-application-readiness = "autonomous_forge.patch_application_readiness_cli:main"
forge-patch-proposal-draft = "autonomous_forge.patch_proposal_draft_cli:main"
forge-patch-proposal-review = "autonomous_forge.patch_proposal_review_cli:main"
forge-patch-text-preflight = "autonomous_forge.patch_text_preflight_cli:main"
forge-patch-text-review = "autonomous_forge.patch_text_review_cli:main"

[tool.setuptools.packages.find]
where = ["src"]