[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-forge"
version = "0.1.0"
description = "Local-first tools for safe autonomous repository maintenance loops."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Autonomous Forge contributors" }]
keywords = ["automation", "maintenance", "cli", "repository"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
forge = "autonomous_forge.cli_entry_patch:main"
forge-change-readiness = "autonomous_forge.change_readiness_cli:main"
forge-commit-create = "autonomous_forge.commit_create_cli:main"
forge-commit-proposal-preview = "autonomous_forge.commit_proposal_preview_cli:main"
forge-commit-readiness = "autonomous_forge.commit_readiness_cli:main"
forge-commit-status-review = "autonomous_forge.commit_status_review_cli:main"
forge-commit-trust-review = "autonomous_forge.commit_trust_review_cli:main"
forge-commit-verify = "autonomous_forge.commit_verify_cli:main"
forge-git-diff-review = "autonomous_forge.git_diff_review_cli:main"
forge-maintenance-archive-copy = "autonomous_forge.maintenance_archive_copy_cli:main"
forge-maintenance-archive-copy-preview = "autonomous_forge.maintenance_archive_copy_preview_cli:main"
forge-maintenance-archive-manifest = "autonomous_forge.maintenance_archive_manifest_cli:main"
forge-maintenance-bundle-verify = "autonomous_forge.maintenance_bundle_verify_cli:main"
forge-maintenance-evidence-bundle = "autonomous_forge.maintenance_evidence_bundle_cli:main"
forge-maintenance-history-link-review = "autonomous_forge.maintenance_history_link_review_cli:main"
forge-maintenance-replay-policy-summary = "autonomous_forge.maintenance_replay_policy_summary_cli:main"
forge-maintenance-replay-summary = "autonomous_forge.maintenance_replay_summary_cli:main"
forge-maintenance-review-compare = "autonomous_forge.maintenance_review_compare_cli:main"
forge-maintenance-review-handoff = "autonomous_forge.maintenance_review_handoff_cli:main"
forge-patch-application-audit = "autonomous_forge.patch_application_audit_cli:main"
forge-patch-application-preflight = "autonomous_forge.patch_application_preflight_cli:main"
forge-patch-application-readiness = "autonomous_forge.patch_application_readiness_cli:main"
forge-patch-apply = "autonomous_forge.patch_apply_cli:main"
forge-patch-generation-preview = "autonomous_forge.patch_generation_preview_cli:main"
forge-patch-proposal-draft = "autonomous_forge.patch_proposal_draft_cli:main"
forge-patch-proposal-review = "autonomous_forge.patch_proposal_review_cli:main"
forge-patch-text-preflight = "autonomous_forge.patch_text_preflight_cli:main"
forge-patch-text-review = "autonomous_forge.patch_text_review_cli:main"
forge-post-apply-validation = "autonomous_forge.post_apply_validation_cli:main"
forge-post-push-verify = "autonomous_forge.post_push_verify_cli:main"
forge-push-handoff = "autonomous_forge.push_handoff_cli:main"
forge-push-readiness = "autonomous_forge.push_readiness_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
